@@ -24,5 +24,5 @@ try:
     f()
 except:
    import pydb
-   pydb.pm()
-   # pydb.pm(['set basename on','set interactive off', 'where','quit'])
+   # pydb.pm()
+   pydb.pm(['set basename on','set interactive off', 'where','quit'])
